--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,10 @@
     "minimum-stability": "stable",
     "require": {
         "php" : "~5.5|~7.0",
-        "yiisoft/yii2": "~2.0"
+        "yiisoft/yii2": "~2.0",
+        "guzzlehttp/guzzle": "^6.3",
+        "guzzlehttp/promises": "^1.3",
+        "guzzlehttp/psr7": "^1.4"
     },
     "autoload": {
         "psr-4": {
